--- a/templates/css/style.styl
+++ b/templates/css/style.styl
@@ -31,7 +31,8 @@ html, body
 // TABLE OF CONTENTS
 ////////////////////////////////////////////////////////////////////////////////
 #custom-pages > ul > li
-  &:hover
+  &:hover,
+  &.active
     background: $aside-notice-bg
 
   > a
