Add background color to path div

--- a/templates/css/style.styl
+++ b/templates/css/style.styl
@@ -357,6 +357,7 @@ embossed-bg()
     margin-bottom: $h1-margin-bottom
     margin-top: 2em
     border-top: 1px solid #ddd
+    background: $aside-notice-bg
 
   h1:first-child, div:first-child + h1
     border-top-width: 0
